examples/test/testpolicy10884.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10884
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key22: value0
      key18: value33
      key45: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value28
      podSelector:
        matchLabels:
          key0: value17
